Fixed sticky header on safari

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,4 +4,7 @@
 
 .app {
   padding: 0px rem(30px);
+  max-width: 768px;
+  margin: 0px auto;
+  margin-top: rem(72px);
 }
